<resources>
    <string name="app_name">智酷</string>
    <string name="user">用户名：</string>
    <string name="password">密   码：</string>
    <string name="password_again">确认密码：</string>
    <string name="sex">性   别</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="age">年   龄</string>
    <string name="otherAccount">账   号</string>
</resources>
