<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:gravity="center_vertical"
    android:background="@drawable/image5"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="0,3"
    tools:context=".MainActivity">

    <TableRow android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView />
        <TextView android:text="@string/user"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView"/>
        <EditText android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditText"/>
        <TextView />
    </TableRow>

    <TableRow android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView />
        <TextView android:text="@string/password"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView"/>
        <EditText android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/editText2"
            android:inputType="textPassword"
            style="@style/EditText"/>
        <TextView />
    </TableRow>

    <TableRow android:id="@+id/tableRow3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <TextView />
        <Button android:text="@string/register"
            android:id="@+id/button_register"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TextView"/>
        <Button android:text="@string/login"
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TextView"/>
        <TextView />
    </TableRow>
</TableLayout>
